fixed navbar overlap

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,9 @@ code {
   #navbar2-text{
     display: none;
   }
+  .short-screen-nav{
+    display: none;
+  }
   
 }
 
